Conversation Card Text overflow ellipsis fix.

--- a/src/app/Home/MainChatScreen/ConversationList/ConversationList.css
+++ b/src/app/Home/MainChatScreen/ConversationList/ConversationList.css
@@ -113,11 +113,6 @@
     display: block !important;
 }
 
-.conversation__details {
-    display: flex;
-    flex-grow: 1;
-}
-
 .conversation__img {
     height: 40px;
     width: 40px;
@@ -128,6 +123,9 @@
     justify-content: center;
     overflow: hidden;
     margin: 0 14px 0 0;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
 }
 
 .conversation__img .profile-img {
@@ -143,6 +141,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    flex-grow: 1;
 }
 
 .conversation__last__message {
@@ -150,6 +149,13 @@
     justify-content: space-between;
     font-size: 10px;
     color: var(--text-grey)
+}
+
+.conversation__last__message .conversation__message {
+    max-width: 70%;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .conversation__title {
